# liburi

./: .gitignore  .gitmodules  Makefile.am  README.md  TODO  configure.ac  liburi-uninstalled.pc.in  liburi.3  liburi.3.html  liburi.3.xml  liburi.h  liburi.pc.in  p_liburi.h  parse.c  props.c  recompose.c  uri_absolute.3  uri_absolute.3.html  uri_absolute.3.xml  uri_absolute_path.3  uri_absolute_path.3.html  uri_absolute_path.3.xml  uri_auth.3  uri_auth.3.html  uri_auth.3.xml  uri_create_str.3  uri_create_str.3.html  uri_create_str.3.xml  uri_create_uri.3  uri_create_uri.3.html  uri_create_uri.3.xml  uri_destroy.3  uri_destroy.3.html  uri_destroy.3.xml  uri_fragment.3  uri_fragment.3.html  uri_fragment.3.xml  uri_host.3  uri_host.3.html  uri_host.3.xml  (+20 more)
debian/: .gitignore  changelog  control  liburi-dev.dirs  liburi-dev.install  liburi.install  rules  uri-utils.install
m4/: Makefile.am  cc.m4  docs.m4  nls.m4
t/: .gitignore  Makefile.am  match.c  p_testsuite.h  test-parse-http-1.c  testsuite.c
util/: .gitignore  Makefile.am  liburi-config.c  uriparse.c
